--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.8"
+    "mongoose": "^6.3.8",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
