--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@google-cloud/scheduler": "^3.0.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -15,7 +16,6 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.8",
-    "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.7",
     "xml2json": "^0.12.0"
   },
